# advent-of-code-2024

./: Cargo.toml  README.md  build.rs  mod.rs.template  solution.rs.template
input/: README.md
src/: grid.rs  main.rs  parsing.rs  solver.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  mod.rs
